Manually merged r5569 to stable branch.
git-svn-id: svn://localhost:8080/caleydo_main/branches/stable_2.1@5569 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3